# homeassistant_salus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASE.md  hacs.json  pyproject.toml  requirements_test.txt
.github/ISSUE_TEMPLATE/: support.yml
.github/workflows/: ci.yml  validate.yml
custom_components/salus/: __init__.py  _climate_state.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  diagnostics.py  entity.py  icons.json  lock.py  manifest.json  pyit600_compat.py  salus_it600_compat.py  sensor.py  strings.json  switch.py
custom_components/salus/translations/: ca.json  en.json
docs/: release-checklist.md  upstream-issues.md
tests/: __init__.py  conftest.py  ha_shim.py  test_binary_sensor.py  test_climate.py  test_climate_state.py  test_config_flow.py  test_coordinator.py  test_cover.py  test_diagnostics.py  test_entities.py  test_init.py  test_lock.py  test_sensor.py  test_switch.py
