[project]
name = "homeassistant-salus"
version = "0.7.12"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"custom_components/**" = ["I001", "UP035"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
